                                   __
                       _ __ ___   / _|  ___  _ __ ___
                      | '_ ` _ \ | |_  / _ \| '_ ` _ \
                      | | | | | ||  _||  __/| | | | | |
                      |_| |_| |_||_|   \___||_| |_| |_|

                               http://mfem.org


Version 3.3.3 (development)
===========================
- When building with the GnuTLS library, switch to using X.509 certificates for
  secure socket authentication. Support for the previously used OpenPGP keys has
  been deprecated in GnuTLS 3.5.x and removed in 3.6.0. For secure communication
  with the visualization tool GLVis, a new set of certificates can be generated
  using the latest version of the script 'glvis-keygen.sh' from GLVis.

Miscellaneous
-------------
- Upgraded MFEM to support Axom 0.2.8. Prior versions are no longer supported.

- Add support for building a shared version of the MFEM library with GNU make.


Version 3.3.2, released on Nov 10, 2017
=======================================

High-order mesh optimization
----------------------------
- Added support for mesh optimization via node-movement based on the Target-
  Matrix Optimization Paradigm (TMOP) developed by P.Knupp et al. A variety of
  mesh quality metrics, with their first and second derivatives have been
  implemented. The combination of targets & quality metrics is used to optimize
  the physical node positions, i.e., they must be as close as possible to the
  shape, size and/or alignment of their targets. The optimization of arbitrary
  high-order meshes in 2D, 3D, serial and parallel is supported.

- The new Mesh Optimizer miniapp can be used to perform mesh optimization with
  TMOP in serial and parallel versions. The miniapp also demonstrates the use of
  nonlinear operators and their coupling to Newton methods for solving
  minimization problems.

New and improved solvers and preconditioners
--------------------------------------------